--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "recharts": "^2.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
