--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@mui/x-date-pickers": "^6.2.0",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
+    "i": "^0.3.7",
+    "npm": "^9.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-material-music-player": "^1.2.0-beta.4",
     "react-router-dom": "^6.10.0",
     "recharts": "^2.5.0"
   },
